@@ -115,6 +115,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18143: Implement ssl.get_default_verify_paths() in order to debug
+  the default locations for cafile and capath.
+
 - Issue #17314: Move multiprocessing.forking over to importlib.
 
 - Issue #11959: SMTPServer and SMTPChannel now take an optional map, use of
